--- a/Sprint 2/styles.css
+++ b/Sprint 2/styles.css
@@ -29,9 +29,7 @@ body{
     
 }
 
-.range{
-    width: 50%;
-}
+
 
 .ranges{
     width: 100%;
@@ -84,7 +82,7 @@ label[for="files"] {
 
 
 .tittleSelect{
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 
@@ -143,13 +141,14 @@ label[for="files"] {
 }
 
 .resultContainer{
+    margin-top: 20px;
     width: 600px;
     height: 600px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
-    background-image: url("./fotos/fondo.png");
+    background-image: url("./fotos/fondo2.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -166,7 +165,7 @@ label[for="files"] {
     color: #444;
     line-height: 1.3;
     padding: .4em 1.4em .3em .8em;
-    width: 300px;
+    width: 250px;
     max-width: 100%; 
     box-sizing: border-box;
     margin: 0;
@@ -199,3 +198,38 @@ label[for="files"] {
    .select-css option {
     font-weight:normal;
    }
+
+
+   /* slider */
+
+   .range {
+    -webkit-appearance: none;
+    width: 60%;
+    height: 7px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: lightseagreen;
+    cursor: pointer;
+  }
+  
+  .range::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: lightseagreen;
+    cursor: pointer;
+  }
